horo: health, love, success done

--- a/assets/scss/horoscope/main.scss
+++ b/assets/scss/horoscope/main.scss
@@ -164,7 +164,7 @@
 
 
 @import "./components/components.report";
-@import "./components/components.api-doc";
+// @import "./components/components.api-doc";
 @import "./components/components.app-ad";
 
 
