--- a/assets/scss/horoscope/components/_components.report.scss
+++ b/assets/scss/horoscope/components/_components.report.scss
@@ -12,28 +12,30 @@ $report-border-color: darken($bg-color, 5%);
     font-size: 110%;
     border-top-left-radius: $global-radius;
     border-top-right-radius: $global-radius;
+    margin-left: 6px;
 }
 
 .c-report__dates {
-    margin-top: 8px;
+    // margin-top: 8px;
     font-size: 80%;
     color: #999;
-    text-decoration: none!important;
+    text-decoration: none !important;
     &:hover {
-        text-decoration: none!important;
+        text-decoration: none !important;
     }
 }
 
 .c-report__body {
     overflow: hidden;
-    border-right: 2px solid $report-border-color;
-    border-bottom: 2px solid $report-border-color;
+    // border-right: 2px solid $report-border-color;
+    // border-bottom: 2px solid $report-border-color;
 }
 
 .c-report__text {
     background-color: #fff;
     padding: 10px;
     overflow: hidden;
+    border: 1px solid $dark-bg-color;
     p {
         margin-bottom: 12px;
     }
@@ -43,7 +45,13 @@ $report-border-color: darken($bg-color, 5%);
 }
 
 .c-report__footer {
-    background-color: $report-border-color;
+    background: $dark-bg-color;
+    background: -moz-linear-gradient(top, $dark-bg-color 100%, $bg-color 100%);
+    background: -webkit-linear-gradient(top, $dark-bg-color 100%,$bg-color 100%);
+    background: linear-gradient(to bottom, $dark-bg-color 0%,$bg-color 100%);
+    border-bottom-left-radius: $global-radius;
+    border-bottom-right-radius: $global-radius;
+    border: 1px solid $dark-bg-color;
     padding: 2px 10px;
 }
 
@@ -61,15 +69,22 @@ $report-border-color: darken($bg-color, 5%);
 
 .c-report__head {
     background: $dark-bg-color;
+    background: -moz-linear-gradient(top, $bg-color 0%, $dark-bg-color 100%);
+    background: -webkit-linear-gradient(top, $bg-color 0%,$dark-bg-color 100%);
+    background: linear-gradient(to bottom, $bg-color 0%,$dark-bg-color 100%);
     padding: 6px;
+    text-align: center;
+    border-top-left-radius: $global-radius;
+    border-top-right-radius: $global-radius;
+    border: 1px solid $dark-bg-color;
 }
 
 .c-report__sign {
     text-align: center;
     color: $accent-color;
     padding: 4px 10px;
-    float: left;
-    width: 150px;
+    display: inline-block;
+    width: 140px;
     position: relative;
     font-size: 90%;
     h3,
@@ -88,49 +103,66 @@ $report-border-color: darken($bg-color, 5%);
     }
 }
 
-.c-report__icon {
-    height: 80px;
-    width: 80px;
-    margin: 0px auto;
-    display: inline-block;
+.c-report {
     .c-zs-icon {
-        width: 100%;
-        height: 100%;
+        height: 50px;
+        width: 50px;
+        margin: 0px auto;
+        display: block;
     }
 }
 
 .c-report__stats {
-    overflow: hidden;
+    padding: $global-spacing-unit-small 0px;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    overflow: hidden;
 }
+
 .c-stat-it {
+    flex-grow: 1;
     display: inline-block;
     width: 30%;
     max-width: 80px;
     height: 90%;
-    
+    margin: 0px 6px;
+    font-size: 90%;
+    font-weight: 600;
+    text-align: center;
     svg {
-        height: 100%;
+        height: 50px;
         width: 100%;
         text {
             text-anchor: middle;
             font-weight: bold;
             vertical-align: middle;
+            font-size: 140%;
         }
     }
     circle {
         stroke-width: 8;
-        stroke-linecap: round;
-        // border-radius: 50%;
+        stroke-linecap: round; // border-radius: 50%;
+    }
+    &.v-health .c-stat-it__line {
+        stroke: #96c557;
+    }
+    &.v-love .c-stat-it__line {
+        stroke: #c84697;
+    }
+    &.v-success .c-stat-it__line {
+        stroke: #2199e8;
     }
 }
+
 .c-stat-it__line {
     fill: #fff;
     stroke: #ca0000;
 }
 
-@media (min-width: 768px) {
-    .u-report-margin {
-        margin-left: 120px;
+@media (min-width: 568px) {
+    .c-report__sign {
+        float: left;
     }
 }
