exclude Share buttons

--- a/assets/scss/portal/main.scss
+++ b/assets/scss/portal/main.scss
@@ -149,7 +149,7 @@
 @import "../base/components/components.ad";
 // @import "../base/components/components.seo-mute";
 @import "../base/components/components.footer";
-@import "../base/components/components.share";
+// @import "../base/components/components.share";
 
 @import "../base/components/components.header-menu";
 @import "../base/components/components.page-menu";
