--- a/assets/scss/news/main.scss
+++ b/assets/scss/news/main.scss
@@ -149,7 +149,7 @@
 @import "../base/components/components.ad";
 // @import "../base/components/components.seo-mute";
 @import "../base/components/components.footer";
-@import "../base/components/components.share";
+// @import "../base/components/components.share";
 @import "../base/components/components.section";
 
 @import "../base/components/components.error";
