lazy load subscribe-bar back image

--- a/assets/scss/base/components/_components.subscribe-bar.scss
+++ b/assets/scss/base/components/_components.subscribe-bar.scss
@@ -1,7 +1,7 @@
 .c-subscribe-bar {
     padding: 30px;
     background-color: #dfdacb;
-    background-image: url('https://c2.staticflickr.com/8/7724/26987380802_dc156534d3_z.jpg');
+    // background-image: url('https://c2.staticflickr.com/8/7724/26987380802_dc156534d3_z.jpg');
     background-position: center center;
     background-size: cover;
     color: #fff;
