--- a/assets/scss/news/components/_components.event-list-item.scss
+++ b/assets/scss/news/components/_components.event-list-item.scss
@@ -188,9 +188,9 @@ $media-icon-color: #fff;
   .c-event-it__title {
     height: 96px;
     overflow: hidden;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 22px; // font-family: $global-font-family;
+    // font-weight: 500;
+    // font-size: 17px;
+    // line-height: 22px; // font-family: $global-font-family;
     margin-bottom: 0px;
     // text-shadow: 1px 1px 1px rgba(10, 10, 10, .3);
   }
@@ -204,7 +204,6 @@ $media-icon-color: #fff;
     right: 0;
     height: 20px;
     margin: 0px 23px 0px 24px;
-    font-size: 90%;
 
     time {
       font-size: 14px;
@@ -214,6 +213,7 @@ $media-icon-color: #fff;
       white-space: nowrap;
       text-align: right;
       float: right;
+      font-size: 85%;
     }
   }
 
