--- a/assets/scss/base/components/_components.page-menu.scss
+++ b/assets/scss/base/components/_components.page-menu.scss
@@ -1,37 +1,47 @@
 .c-page-menu {
-    ul {
-        overflow: hidden;
-        white-space: nowrap;
-        margin: 0px;
-        list-style: none;
-        overflow: hidden;
-        height: 30px;
+  ul {
+    margin: 0px;
+    list-style: none;
+    height: 30px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+
+    -webkit-overflow-scrolling: touch;
+
+    &::-webkit-scrollbar {
+      display: none;
     }
+  }
 }
 
 .c-page-menu__i {
-    padding: 0px $global-spacing-unit-tiny + 1;
+  padding: 0px $global-spacing-unit-tiny + 1;
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  max-width: 160px;
+  text-overflow: ellipsis;
+  padding-bottom: 3px;
+
+  &:first-child {
+    padding-left: 0px;
+  }
+
+  a {
+    color: $text-color;
+    text-decoration: none;
     display: inline-block;
-    overflow: hidden;
-    white-space: nowrap;
-    max-width: 160px;
-    text-overflow: ellipsis;
     padding-bottom: 3px;
-    &:first-child {
-        padding-left: 0px;
+
+    &:hover {
+      color: $accent-color;
     }
+  }
+
+  &.v--selected {
     a {
-        color: $text-color;
-        text-decoration: none;
-        display: inline-block;
-        padding-bottom: 3px;
-        &:hover {
-            color: $accent-color;
-        }
+      box-shadow: 0px 3px 0px $accent-color;
     }
-    &.v--selected {
-        a {
-            box-shadow: 0px 3px 0px $accent-color;
-        }
-    }
+  }
 }
