--- a/assets/scss/news/components/_components.page-title.scss
+++ b/assets/scss/news/components/_components.page-title.scss
@@ -1,15 +1,16 @@
-
 .c-page-title {
-    margin-bottom: 20px;
-    h1 {
-        font-weight: 500;
-        margin-bottom: $global-spacing-unit-small;
-        font-size: 1.8rem;
-    }
-    h2 {
-        font-weight: normal;
-        margin-bottom: $global-spacing-unit-small;
-        font-size: 0.9rem;
-        color: $gray;
-    }
+  margin-bottom: 20px;
+  h1 {
+    font-weight: 500;
+    margin-bottom: $global-spacing-unit;
+    font-size: 1.8rem;
+  }
+  h2,
+  h3,
+  h4 {
+    font-weight: normal;
+    margin-bottom: $global-spacing-unit-small;
+    font-size: 0.9rem;
+    color: $gray;
+  }
 }
