--- a/assets/scss/base/components/_components.share.scss
+++ b/assets/scss/base/components/_components.share.scss
@@ -1,31 +1,31 @@
 .c-share {
-    display: block;
-    min-height: 24px;
+  display: block;
+  min-height: 24px;
 }
 
 .c-share.v--right {
-    float: right;
-    text-align: right;
+  float: right;
+  text-align: right;
 }
 
 .c-share.v--left {
-    float: left;
+  float: left;
 }
 
 .c-share.v--small {
-    .c-share__icon,
-    .c-share__item {
-        height: 24px;
-        width: 24px;
-    }
+  .c-share__icon,
+  .c-share__item {
+    height: 24px;
+    width: 24px;
+  }
 }
 .c-share.v--long {
-    min-width: 60%;
-    .c-share__item {
-        width: 30%;
-        min-width: 32px;
-        max-width: 100px;
-    }
+  min-width: 60%;
+  .c-share__item {
+    width: 30%;
+    min-width: 32px;
+    max-width: 100px;
+  }
 }
 
 $facebook-color: #3b5998;
@@ -35,62 +35,62 @@ $twitter-color: #00aced;
 $whatsapp-color: #65bc54;
 
 .c-share.v--tiny {
-    .c-share__icon,
-    .c-share__item {
-        height: 22px;
-        width: 22px;
-        background: transparent;
+  .c-share__icon,
+  .c-share__item {
+    height: 22px;
+    width: 22px;
+    background: transparent;
+  }
+  .c-share__icon {
+    svg {
+      fill: #888;
     }
-    .c-share__icon {
-        svg {
-            fill: #888;
-        }
-    }
+  }
 }
 
 .c-share__icon {
-    display: inline-block;
-    height: 32px;
-    width: 32px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    svg {
-        fill: #fff;
-        width: 100%;
-        height: 100%;
-    }
+  display: inline-block;
+  height: 100%;
+  width: 32px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  svg {
+    fill: #fff;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .c-share__item {
-    display: inline-block;
-    margin: 0px 4px 0px 0px;
-    vertical-align: top;
-    line-height: normal;
-    font-family: Arial, sans;
-    height: 32px;
-    width: 32px;
-    border-radius: 2px;
-    text-align: left;
-    cursor: pointer;
-    &:hover {
-        opacity: .9;
-    }
-    &:last-child {
-        margin-right: 0px;
-    }
+  display: inline-block;
+  margin: 0px 4px 0px 0px;
+  vertical-align: top;
+  line-height: normal;
+  font-family: Arial, sans;
+  height: 22px;
+  width: 42px;
+  border-radius: 2px;
+  text-align: left;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.9;
+  }
+  &:last-child {
+    margin-right: 0px;
+  }
 }
 
 .c-share__item {
-    &.v--facebook {
-        background-color: $facebook-color;
-    }
-    &.v--vk {
-        background-color: $vk-color;
-    }
-    &.v--okru {
-        background-color: $okru-color;
-    }
-    &.v--twitter {
-        background-color: $twitter-color;
-    }
+  &.v--facebook {
+    background-color: $facebook-color;
+  }
+  &.v--vk {
+    background-color: $vk-color;
+  }
+  &.v--okru {
+    background-color: $okru-color;
+  }
+  &.v--twitter {
+    background-color: $twitter-color;
+  }
 }
