--- a/assets/scss/weather/main.scss
+++ b/assets/scss/weather/main.scss
@@ -152,7 +152,7 @@
 @import "../base/components/components.ad";
 @import "../base/components/components.seo-mute";
 @import "../base/components/components.footer";
-// @import "../base/components/components.share";
+@import "../base/components/components.share";
 @import "../base/components/components.subscribe-bar";
 @import "../base/components/components.section";
 @import "../base/components/components.fb-plike";
