Horoscope: add share buttons

--- a/assets/scss/horoscope/main.scss
+++ b/assets/scss/horoscope/main.scss
@@ -150,7 +150,7 @@
 @import "../base/components/components.ad";
 @import "../base/components/components.seo-mute";
 @import "../base/components/components.footer";
-// @import "../base/components/components.share";
+@import "../base/components/components.share";
 // @import "../base/components/components.subscribe-bar";
 @import "../base/components/components.error";
 // @import "../base/components/components.sticky-title";
