use d1mm9th3p1o4yr.cloudfront.net for assets.ournetcdn.net

--- a/assets/scss/weather/components/_components.weather-icons.scss
+++ b/assets/scss/weather/components/_components.weather-icons.scss
@@ -2,9 +2,9 @@
 	width: 40px;
 	height: 40px;
 	display: inline-block;
-	background: url('//assets.ournetcdn.net/root/img/icons/weather/40-weather-icons-wb.png') 0 0 no-repeat;
+	background: url('//d1mm9th3p1o4yr.cloudfront.net/root/img/icons/weather/40-weather-icons-wb.png') 0 0 no-repeat;
 	&.night {
-		background: url('//assets.ournetcdn.net/root/img/icons/weather/40-weather-icons-night-wb.png') 0 0 no-repeat;
+		background: url('//d1mm9th3p1o4yr.cloudfront.net/root/img/icons/weather/40-weather-icons-night-wb.png') 0 0 no-repeat;
 	}
 	/* LightCloud */
 	&.wi-2 {
