--- a/assets/scss/horoscope/components/_components.app-ad.scss
+++ b/assets/scss/horoscope/components/_components.app-ad.scss
@@ -5,7 +5,7 @@
     // overflow: hidden;
     // background-color: #333;
     // padding: $global-spacing-unit-tiny $global-spacing-unit-small;
-    // background-image: url('//d1mm9th3p1o4yr.cloudfront.net/ournet/img/horo/night-sky-480-160.jpg');
+    // background-image: url('//assets.ournetcdn.net/ournet/img/horo/night-sky-480-160.jpg');
     // background-position: center;
     // background-size: cover;
     text-align: center;
