--- a/assets/scss/horoscope/main.scss
+++ b/assets/scss/horoscope/main.scss
@@ -157,6 +157,7 @@
 @import "../base/components/components.header-menu";
 @import "../base/components/components.page-menu";
 @import "../base/components/components.page-content-section";
+@import "../base/components/components.ad-maiar";
 
 @import "./components/components.page-title";
 @import "../weather/components/components.weather-icons";
