--- a/assets/scss/weather/main.scss
+++ b/assets/scss/weather/main.scss
@@ -159,6 +159,7 @@
 @import "../base/components/components.header-menu";
 @import "../base/components/components.page-menu";
 @import "../base/components/components.page-content-section";
+@import "../base/components/components.ad-maiar";
 // @import "../base/components/components.sticky-title";
 // @import "../base/components/components.horo-box";
 
