--- a/assets/scss/news/main.scss
+++ b/assets/scss/news/main.scss
@@ -156,6 +156,7 @@
 @import "../base/components/components.header-menu";
 @import "../base/components/components.page-menu";
 @import "../base/components/components.page-content-section";
+@import "../base/components/components.ad-maiar";
 
 @import "../weather/components/components.weather-icons";
 
