--- a/assets/scss/base/components/_components.ad-maiar.scss
+++ b/assets/scss/base/components/_components.ad-maiar.scss
@@ -5,7 +5,7 @@
 a.ad-maiar {
   display: block;
   height: 100%;
-  background-image: url(https://assets.ournetcdn.net/ournet/img/ads/maiar-app-banner-op.png);
+  background-image: url(/img/ads/maiar-app-banner-op.png);
   background-position: top center;
   background-repeat: no-repeat;
 }
