Remove Onesignal weather

--- a/assets/scss/weather/main.scss
+++ b/assets/scss/weather/main.scss
@@ -153,7 +153,7 @@
 @import "../base/components/components.seo-mute";
 @import "../base/components/components.footer";
 @import "../base/components/components.share";
-@import "../base/components/components.subscribe-bar";
+// @import "../base/components/components.subscribe-bar";
 @import "../base/components/components.section";
 @import "../base/components/components.fb-plike";
 @import "../base/components/components.header-menu";
