--- a/assets/scss/news/main.scss
+++ b/assets/scss/news/main.scss
@@ -174,6 +174,7 @@
 @import "./components/components.topic";
 
 @import "./components/components.horo-card";
+@import "./components/components.source-list-item";
 
 
 // UTILITIES
