update head resources

--- a/assets/scss/base/components/_components.ad.scss
+++ b/assets/scss/base/components/_components.ad.scss
@@ -8,6 +8,6 @@
     margin-bottom: $global-spacing-unit-small;
 }
 
-.c-ad--wide {
-    // max-height: 200px;
-}
+// .c-ad--wide {
+//     // max-height: 200px;
+// }
