--- a/assets/scss/base/components/_components.footer.scss
+++ b/assets/scss/base/components/_components.footer.scss
@@ -14,6 +14,8 @@
     a {
         color: $text-color;
         font-weight: 500;
+        display: inline-block;
+        padding: 1px 0px;
     }
 
     .c-aline {
