/ads & /business pages

--- a/assets/scss/portal/main.scss
+++ b/assets/scss/portal/main.scss
@@ -150,6 +150,7 @@
 // @import "../base/components/components.seo-mute";
 @import "../base/components/components.footer";
 // @import "../base/components/components.share";
+@import "../base/components/components.section";
 
 @import "../base/components/components.header-menu";
 @import "../base/components/components.page-menu";
@@ -164,6 +165,9 @@
 @import "../news/components/components.quote-list-item";
 
 @import "../news/components/components.horo-card";
+
+@import "../news/components/components.page-title";
+@import "../news/components/components.event";
 
 
 // UTILITIES
