portal critical-async css

--- a/assets/scss/news/components/_components.horo-card.scss
+++ b/assets/scss/news/components/_components.horo-card.scss
@@ -11,9 +11,9 @@ $card-height: 280px;
     background-color: #333;
     padding: $global-spacing-unit-small $global-spacing-unit;
     text-align: center;
-    background-image: url('//assets.ournetcdn.net/ournet/img/horo/night-sky-480.jpg');
-    background-position: center;
-    background-size: cover;
+    // background-image: url('//assets.ournetcdn.net/ournet/img/horo/night-sky-480.webp');
+    // background-position: center;
+    // background-size: cover;
 }
 
 .c-horo-card__title {
