--- a/assets/scss/base/_settings.global.scss
+++ b/assets/scss/base/_settings.global.scss
@@ -106,3 +106,10 @@ $mq-breakpoints: (
 
 
 $global-font-size: $inuit-global-font-size;
+
+$inuit-font-size-h1:  36px !default;
+$inuit-font-size-h2:  28px !default;
+$inuit-font-size-h3:  24px !default;
+$inuit-font-size-h4:  20px !default;
+$inuit-font-size-h5:  18px !default;
+$inuit-font-size-h6:  16px !default;
