--- a/assets/scss/weather/components/_components.weather-icons.scss
+++ b/assets/scss/weather/components/_components.weather-icons.scss
@@ -3,8 +3,8 @@
 	height: 40px;
 	display: inline-block;
 	&img {
-		width: 100%;
-		height: 100%;
+		width: 40px;
+		height: 40px;
 	}
 	// background: url('//assets.ournetcdn.net/root/img/icons/weather/40-weather-icons-wb.png') 0 0 no-repeat;
 	// &.night {
