--- a/assets/scss/portal/critical.scss
+++ b/assets/scss/portal/critical.scss
@@ -139,18 +139,18 @@
 //
 // Build and include your project’s UI components here.
 // @import "components/example.components.buttons";
-@import "../base/components/components.aline";
-@import "../base/components/components.logo";
-@import "../base/components/components.header";
-@import "../base/components/components.capital-forecast";
-@import "../base/components/components.group";
+// @import "../base/components/components.aline";
+// @import "../base/components/components.logo";
+// @import "../base/components/components.header";
+// @import "../base/components/components.capital-forecast";
+// @import "../base/components/components.group";
 
-@import "../base/components/components.header-menu";
-@import "../base/components/components.page-menu";
-@import "../base/components/components.page-content-section";
+// @import "../base/components/components.header-menu";
+// @import "../base/components/components.page-menu";
+// @import "../base/components/components.page-content-section";
 
-@import "../news/components/components.page-title";
-@import "../weather/components/components.weather-icons";
+// @import "../news/components/components.page-title";
+// @import "../weather/components/components.weather-icons";
 
 // @import "../base/components/components.ad";
 
