--- a/assets/scss/portal/main.scss
+++ b/assets/scss/portal/main.scss
@@ -167,7 +167,7 @@
 @import "../news/components/components.horo-card";
 
 @import "../news/components/components.page-title";
-// @import "../news/components/components.event";
+@import "../news/components/components.event";
 
 
 // UTILITIES
